<resources>
    <string name="app_name">MiD - Message in Distress</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="reenter_passcode">Re-enter Passcode</string>
    <string name="create_passcode">Create new Passcode</string>
    <string name="include_your_location">Include Your Location</string>
    <string name="start_using_the_service">Start using the Service</string>
    <string name="type_in_the_contact_name">Type in the contact name</string>
    <string name="type_message_to_send">Type message to send</string>
    <string name="save">Save</string>
    <string name="choose_contact">Choose from Contacts</string>
    <string name="no_contacts">No contacts</string>
    <string name="no_mobile_number_avaialble">No mobile number available</string>
    <string name="choose_contact_details">Choose a contact with mobile number to which you would like to receive the message.</string>
    <string name="start_using_the_service_details">Tick the check box to start sending SMS text to selected contact.</string>
    <string name="type_message_to_send_details">Type in the message to be sent via SMS to the selected contact.</string>
    <string name="save_details">Saved the latest changes.</string>
    <string name="change_passcode_details">To change your current passcode, please enter your current Passcode and new Passcode.</string>
    <string name="reset_settings_details">Removes selected contact, stops the service and removes the saved message.</string>
    <string name="old_passcode">Old Passcode</string>
    <string name="new_passcode">New Passcode</string>
    <string name="confirm_new_passcode">Confirm New Passcode</string>

    <!-- Information Messages -->
    <string name="please_select_contact">Please select a Contact</string>
    <string name="no_mobile_number_message">"%1$s do not have a mobile number."</string>
    <string name="saved">Saved Changes.</string>
    <string name="send_message_to">Send Message to:</string>
    <string name="wrong_passcode">Passcode entered is wrong. Please retry.</string>
    <string name="missmatch_passcode">Passcode does not match. Please enter same passcode in both fields.</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="read_permission_message">Read permissions for your contacts is required to choose a contact. Please Change the app permissions.</string>
    <string name="send_sms_permission_message">Send SMS permissions is required to send message. Please Change the app permissions.</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="reset_settings">Reset settings</string>
    <string name="reset_message">This will clear all your settings including selected contact and stopping the service.\n\nWould you like to reset?</string>
    <string name="reset_done">Reset done.</string>
    <string name="passcode_changed_confirmation">Passcode changed.</string>

    <!-- Error Messages -->
    <string name="old_passcode_empty_error">Please enter your Old Passcode.</string>
    <string name="new_passcode_empty_error">Please enter your New Passcode.</string>
    <string name="new_old_passcode_same_error">Please enter different New Passcode.</string>
    <string name="new_passcode_missmatch_error">New Passcode do not match.</string>
    <string name="old_passcode_missmatch_error">Old Passcode is not correct.</string>
    <string name="how_to_use">How to use</string>
    <string name="how_to_use_details">Choose a contact from contacts, enable the service, add a message and save.\n\nOnce you have saved the information and closed the application, you can just press the power button 3 times quickly in succession to send message to selected contact.</string>

</resources>
