<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings_change_passcode"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/change_passcode"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings_reset"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/reset_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        app:showAsAction="ifRoom"/>
</menu>