<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fab_small_margin">

    <EditText
        android:id="@+id/change_passcode_old_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="numberPassword"
        android:ems="10"
        android:hint="@string/old_passcode"
        android:layout_margin="@dimen/fab_small_margin"
        android:textColorHint="@color/DarkGreen"
        android:textColor="@color/SteelBlue"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/change_passcode_new_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="numberPassword"
        android:ems="10"
        android:hint="@string/new_passcode"
        android:layout_below="@+id/change_passcode_old_passcode"
        android:layout_margin="@dimen/fab_small_margin"
        android:textColorHint="@color/DarkGreen"
        android:textColor="@color/SteelBlue" />

    <EditText
        android:id="@+id/change_passcode_confirm_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/confirm_new_passcode"
        android:inputType="numberPassword"
        android:ems="10"
        android:layout_below="@+id/change_passcode_new_passcode"
        android:layout_margin="@dimen/fab_small_margin"
        android:textColorHint="@color/DarkGreen"
        android:textColor="@color/SteelBlue"/>


    <Button
        android:id="@+id/change_passcode_change_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/change_passcode_confirm_passcode"
        android:layout_marginTop="@dimen/fab_med_margin"
        android:layout_marginLeft="@dimen/fab_med_margin"
        android:layout_marginRight="@dimen/fab_med_margin"
        android:text="@string/change_passcode" />

    <Button
        android:id="@+id/change_passcode_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/fab_med_margin"
        android:layout_below="@+id/change_passcode_change_passcode"
        android:text="@android:string/cancel" />



    <RelativeLayout
        android:id="@+id/snackbarPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>