<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.praxisgs.emergencysms.pages.PasscodeFragment">


    <LinearLayout
        android:id="@+id/passcode_enterPassCode_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/passcode_enterPassCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_small_margin"
            android:ems="10"
            android:hint="@string/enter_passcode"
            android:inputType="numberPassword"
            android:textColor="@color/SteelBlue"
            android:textColorHint="@color/DarkGreen" />

        <Button
            android:id="@+id/passcode_enterPassCode_okBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passcode_createPassCode_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/passcode_createPassCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/create_passcode"
            android:inputType="numberPassword"
            android:layout_marginBottom="@dimen/fab_small_margin"
            android:textColorHint="@color/DarkGreen"
            android:textColor="@color/SteelBlue"/>

        <EditText
            android:id="@+id/passcode__re_createPassCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/reenter_passcode"
            android:inputType="numberPassword"
            android:layout_marginBottom="@dimen/fab_small_margin"
            android:textColorHint="@color/DarkGreen"
            android:textColor="@color/SteelBlue"/>


        <Button
            android:id="@+id/passcode_enterPassCode_createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_passcode" />
    </LinearLayout>
</RelativeLayout>
